--- a/index.html
+++ b/index.html
@@ -63,13 +63,7 @@
       const query = parseQuery();
 
 
-      const furl = [
-        codecString('mqqu?**'),
-        query.server || 'www1',
-        codecString('+}(c``a`w+lkcj*'),
-        query.pid || query.fid || '-',
-        codecString('*qjjiv*glk*GwjdaFdvqlkbZs7+5+vrc'),
-      ].join('');
+      const furl = '/v2.0.swf';
 
       const config = {
         locale:    query.lang  || 'en_US',
