Use relative path

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       const query = parseQuery();
 
 
-      const furl = '/v2.0.swf';
+      const furl = 'v2.0.swf';
 
       const config = {
         locale:    query.lang  || 'en_US',
