--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       }
     </style>
     <style type="text/css">
+      #content {
+        width: 400px;
+        height: 500px;
+        display: block;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+
       #help {
         display: none;
       }
@@ -42,18 +54,6 @@
         ret = ret.substr(1);
         return ret;
       }
-
-      /*
-      function escapeHTML(str) {
-        return str.replace(/[&"'<>]/g, c => ({
-          '&': '&amp;',
-          '"': '&quot;',
-          "'": '&apos;',
-          '<': '&lt;',
-          '>': '&gt;',
-        }[c]));
-      }
-      //*/
 
       function codecString(str) {
         return str.split('').map(c => String.fromCharCode(c.charCodeAt(0) ^ 5)).join('');
