--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </p>
 
     <script type="text/javascript">
+      'use strict';
+
       function parseQuery() {
         let ret = {};
         window.location.search.substr(1).split('&').forEach(query => {
